--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
                     ><h4>Kickstarter Analysis</h4></a
                   >
                   <p>
-                    Kickstarter sales analysis and breakdown by category for
-                    years between 2009 and 2018.
+                    An in-depth analysis of Kickstarter sales data, examining
+                    trends and performance across various categories, spanning
+                    the years from 2009 to 2018.
                   </p>
                 </div>
               </article>
@@ -108,9 +109,9 @@
                     ><h4>Underground Mine Production</h4></a
                   >
                   <p>
-                    Interactive map showcasing currently producing worldwide
-                    mining operations with detailed breakdowns of popular
-                    commodities and minerals.
+                    An interactive map displaying currently active global mining
+                    operations, featuring detailed breakdowns of popular
+                    commodities and minerals produced at each location.
                   </p>
                 </div>
               </article>
@@ -127,9 +128,10 @@
                     <h4>Top Artists and Artwork Sales for 2022</h4></a
                   >
                   <p>
-                    Tableau dashboard of various breakdowns of fine art sales
-                    and top selling artists for 2022, complete with adjustable
-                    filters.
+                    A dynamic Tableau dashboard showcasing comprehensive
+                    breakdowns of fine art sales in 2022, including data on top
+                    selling artists, complemented by adjustable filters for
+                    personalized insights and exploration
                   </p>
                 </div>
               </article>
