--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
               ><span class="label">Github</span></a
             >
           </li>
+          <li>
+            <a
+              href="https://www.kaggle.com/mikegillotti"
+              class="icon brands fa-kaggle"
+              ><span class="label">Kaggle</span></a
+            >
+          </li>
         </ul>
       </footer>
     </section>
