--- a/index.html
+++ b/index.html
@@ -160,6 +160,25 @@
                   </p>
                 </div>
               </article>
+              <article>
+                <a
+                  href="https://www.kaggle.com/datasets/mikegillotti/video-game-sales?select=video+game+sales+titles.csv"
+                  class="image"
+                  ><img src="images/vg.jpg" alt=""
+                /></a>
+                <div class="inner">
+                  <a
+                    href="https://www.kaggle.com/datasets/mikegillotti/video-game-sales?select=video+game+sales+titles.csv"
+                  >
+                    <h4>Video Game Sales Dataset</h4></a
+                  >
+                  <p>
+                    This dataset comprises sales data for more than 54,000 video
+                    game titles, extracted using a custom web scraper, then
+                    cleaned in Excel.
+                  </p>
+                </div>
+              </article>
             </div>
           </div>
         </section>
